--- a/src/main/resources/csvmapfile.properties
+++ b/src/main/resources/csvmapfile.properties
@@ -2,11 +2,31 @@
 
 csvmapfile.separator.column=|
 
+#-----------Document Loader
+csvmapfile.CreatePalmaDocument=01legacyIterationIdentifier~02legacyMasterIdentifier~03legacyOriginIdentifier~04softType~05number~06name~07description~11version~15container~16folder~17id~18ctd~19cage~20icd~21enLabel~22frLabel~24language~25author~26externalRevisionDate~27totalNbPages~28pageSize~29mediaType~90releasedOn~95lifeCycleState~96creator~97modifier~98createTimestamp~99modifyTimestamp
+#-----------Engineering Change Proposal (ECP) Loader
+csvmapfile.CreatePalmaECP=01legacyIterationIdentifier~02legacyMasterIdentifier~05number~06name~07description~15container~16folder~17id~18ctd~19cage~20icd~21ECPClass~22askingForCustomerApproval~23customerName~24customerApprovalDate~25askingForOfficialServicesApproval~26officialServicesApprovalName~27officialServicesApprovalDate~95lifeCycleState~96creator~97modifier~98createTimestamp~99modifyTimestamp
+#-----------Request For Deviation (RFD) Loader
+csvmapfile.CreatePalmaRFD=01legacyIterationIdentifier~02legacyMasterIdentifier~05number~06name~07description~15container~16folder~17id~18ctd~19cage~20icd~21visibility~23severity~24expectedClosureDate~25usageRestriction~26closureCriterion~27safetyImpactDerog~28performanceImpact~29functionalImpact~30logisticImpact~31reliabilityImpact~32visualImpact~33sizeImpact~34weightImpact~35otherImpact~36classification~95lifeCycleState~96creator~97modifier~98createTimestamp~99modifyTimestamp
+#-----------Problem Report (PR) Loader
+csvmapfile.CreatePalmaProblemReport=01legacyIterationIdentifier~02number~03name~04description~05requester~08resolutionDate~15container~17id~18cage~19icd~20issueCategory~21businessProcess~22blockingStatus~23dateDiscovered~24partnerName~25partnerReference~26eventSeverity~27safetyImpact~28rejectConsequences~29proposedAction~30ncCurativeActions~31drCurativeActions~32prExpectedImprovement~33ncExpectedImprovement~34rootCauseSearch~35prRootCauseClass~36ncRootCauseClass~37prRootCauseDesc~38ncRootCauseDesc~39prCollateralDispositions~40ncCollateralDispositions~41problemClass~42defectClass~43nonConformanceClass~44nonConformanceOrigin~45environment~46budgetLine~47estimatedTime~48calculatedTimeSpent~49estimatedMaterialCosts~50calculatedMaterialCosts~51estimatedExpenses~52calculatedExpenses~53prFeature~54ncFeature~55activityInProgress~56ncDefectingQuantity~57drDefectingQuantity~58approver~95lifeCycleState~96creator~97modifier~98createTimestamp~99modifyTimestamp
+#-----------Content Loader (File, URL or External Location)
+csvmapfile.CreatePalmaContent=01legacyIterationIdentifierContentHolder~02classnameContentHolder~03numberContentHolder~04versionContentHolder~05contentType~06contentRole~07contentPath~08contentName~09contentDescription~96creator~98createTimestamp~99modifyTimestamp
+#-----------Native Neutral Content Link Loader
+csvmapfile.CreatePalmaNativeNeutralContentLink=01legacyIterationIdentifier~02number~03version~04nativeFileName~05neutralFileName~06automaticConversion
+#-----------Part - Document Describe Link Loader
+csvmapfile.CreatePalmaPartDescribeLink=01legacyIterationIdentifierPart~02numberPart~03versionPart~04viewPart~05legacyIterationIdentifierDocument~06numberDocument~07versionDocument~98createTimestamp~99modifyTimestamp
+#-----------Part - Document Reference Link Loader
+csvmapfile.CreatePalmaPartReferenceLink=01legacyIterationIdentifierPart~02numberPart~03versionPart~04viewPart~05legacyMasterIdentifierDocument~06numberDocument~98createTimestamp~99modifyTimestamp
+#-----------Part - RFD Link Loader
+csvmapfile.CreatePalmaDeviationConfigurationLink=01legacyIterationIdentifierPart~02numberPart~03versionPart~04viewPart~05legacyIterationIdentifierDocument~06numberDocument~07versionDocument~98createTimestamp~99modifyTimestamp
+
 # TAS BEGIN
 #-----------Item Loader [Internal HW, External HW] (extend of CreatePalmaPart)
 csvmapfile.CreateTASInternalHW=01legacyIterationIdentifier~02legacyMasterIdentifier~03legacyOriginIdentifier~04softType~05number~06name~07view~08partType~09genericType~10source~11version~12defaultUnit~13defaultTraceCode~14endItem~15container~16folder~17id~18cage~19icd~20enLabel~21frLabel~22description~23technicalClassification~24unitTracking~25reusable~26repairable~27isLogisticAssembly~28logisticStatus~29shelfLife~30productMaturity~31COTS~32softwareBaselineID~33softwareBuildID~34authorizationCode~35obsolescenceStatus~36isPhantom~37LBODate~38localPPLStatus~40functionalStatus~41baseTrackingIdentifier~42itemType~48startEffectivityDate~49spareable~90releasedOn~95lifeCycleState~96creator~97modifier~98createTimestamp~99modifyTimestamp~900qualityDef~907model~908pdmPart~909suffix~910derivedPart~911projectPart~912createFrom~917isTracedByMRP
 #----------- Specified Item Loader (extend of CreatePalmaSpecifiedItem)
 csvmapfile.CreateTASSpecifiedItem=01legacyIterationIdentifier~02legacyMasterIdentifier~03legacyOriginIdentifier~05number~06name~08partType~11version~14endItem~15container~16folder~17id~18cage~19icd~20enLabel~21frLabel~25reusable~40functionalStatus~60itemCategory~61developmentCriterion~62comment~63externalID~90releasedOn~95lifeCycleState~96creator~97modifier~98createTimestamp~99modifyTimestamp~912createFrom
+
 #----------- Component Loader (extend of CreatePalmaComponent)
 csvmapfile.CreateTASComponent=01legacyIterationIdentifier~02legacyMasterIdentifier~03legacyOriginIdentifier~04softType~05number~06name~07view~08partType~09genericType~10source~11version~12defaultUnit~13defaultTraceCode~15container~16folder~17id~18cage~19icd~20enLabel~21frLabel~22description~23technicalClassification~29shelfLife~30productMaturity~31COTS~33softwareBuildID~34authorizationCode~35obsolescenceStatus~37LBODate~38localPPLStatus~46PPLStatus~48startEffectivityDate~59smd~60validSourcesCount~61lastSourceChange~62PPLApplication~63biNumber~65selectedSource~90releasedOn~95lifeCycleState~96creator~97modifier~98createTimestamp~99modifyTimestamp~904userCode~906itemNumber~911projectPart~912createFrom~913partGroup~914materialGroup~917isTracedByMRP
 #----------- 3E Part Loader (extend of CreateTASPalmaComponent)
@@ -17,4 +37,5 @@ csvmapfile.CreatePalmaTasReachObjectProcess=01legacyIterationIdentifier~02legacy
 csvmapfile.CreatePalmaTasReachObjectMaterial=01legacyIterationIdentifier~02legacyMasterIdentifier~04softType~05number~06name~07view~08partType~09genericType~10source~11version~12defaultUnit~13defaultTraceCode~15container~16folder~17id~18cage~19icd~36isPhantom~63biNumber~64tcisURL~90releasedOn~95lifeCycleState~96creator~97modifier~98createTimestamp~99modifyTimestamp~903group~904userCode~906itemNumber~912createFrom~917isTracedByMRP
 #-----------Part Usage Link Loader
 csvmapfile.CreateTASPartUsageLink=01legacyIterationIdentifierUses~02numberUses~03versionUses~04viewUses~05legacyMasterIdentifierUsed~06numberUsed~07amount~08unit~09findNumber~10lineNumber~11referenceDesignator~12origin~13traceCode~14legacyFindNumber~98createTimestamp~99modifyTimestamp~912usedNotUsed~913duplicate~914codop~915preparedQuantity~916shift
+
 # TAS END
