ClassDoc Improvements (also the internal tool Logs are improved)

--- a/src/main/resources/logs_migration.properties
+++ b/src/main/resources/logs_migration.properties
@@ -4,46 +4,72 @@ logs_migration.failure.cutoffDelta=43200000
 
 logs_migration.action.logging.filename=LogsMigration.log
 logs_migration.action.logging.dateformat=yyyy.MM.dd G 'at' HH:mm:ss
-logs_migration.action.logging.level=INFO
+logs_migration.action.logging.level=WARNING
 
 
 logs_migration.CreateTASComponent.processorclassname=com.thales.palma.processors.TASComponentLogsProcessor
 logs_migration.CreateTASComponent.fail_file_name=not3ECompFailed
 logs_migration.CreateTASComponent.logactiondateformat.gen=yyyy-MM-dd HH:mm:ss
+logs_migration.CreateTASComponent.logactiondateformat.ok=yyyy-MM-dd HH:mm:ss
+logs_migration.CreateTASComponent.logactiondateformat.ko=yyyy-MM-dd HH:mm:ss
 logs_migration.Create3EComponent.processorclassname=com.thales.palma.processors.TAS3EComponentLogsProcessor
 logs_migration.Create3EComponent.fail_file_name=3ECompFailed
 logs_migration.Create3EComponent.logactiondateformat.gen=yyyy-MM-dd HH:mm:ss
+logs_migration.Create3EComponent.logactiondateformat.ok=yyyy-MM-dd HH:mm:ss
+logs_migration.Create3EComponent.logactiondateformat.ko=yyyy-MM-dd HH:mm:ss
 logs_migration.CreateTASInternalHW.processorclassname=com.thales.palma.processors.TASInternalHWLogsProcessor
 logs_migration.CreateTASInternalHW.fail_file_name=partsFailed
 logs_migration.CreateTASInternalHW.logactiondateformat.gen=yyyy-MM-dd HH:mm:ss
+logs_migration.CreateTASInternalHW.logactiondateformat.ok=yyyy-MM-dd HH:mm:ss
+logs_migration.CreateTASInternalHW.logactiondateformat.ko=yyyy-MM-dd HH:mm:ss
 logs_migration.CreateTASPartUsageLink.processorclassname=com.thales.palma.processors.TASPartUsageLinkLogsProcessor
 logs_migration.CreateTASPartUsageLink.fail_file_name=structLinksFailed
 logs_migration.CreateTASPartUsageLink.logactiondateformat.gen=yyyy-MM-dd HH:mm:ss
+logs_migration.CreateTASPartUsageLink.logactiondateformat.ok=yyyy-MM-dd HH:mm:ss
+logs_migration.CreateTASPartUsageLink.logactiondateformat.ko=yyyy-MM-dd HH:mm:ss
 
 logs_migration.CreatePalmaDocument.processorclassname=com.thales.palma.processors.TASDocumentLogsProcessor
 logs_migration.CreatePalmaDocument.fail_file_name=documentsFailed
 logs_migration.CreatePalmaDocument.logactiondateformat.gen=yyyy-MM-dd HH:mm:ss
+logs_migration.CreatePalmaDocument.logactiondateformat.ok=yyyy-MM-dd HH:mm:ss
+logs_migration.CreatePalmaDocument.logactiondateformat.ko=yyyy-MM-dd HH:mm:ss
 logs_migration.CreatePalmaECP.processorclassname=com.thales.palma.processors.TASDefaultLogsProcessor
 logs_migration.CreatePalmaECP.fail_file_name=ecpsFailed
 logs_migration.CreatePalmaECP.logactiondateformat.gen=yyyy-MM-dd HH:mm:ss
+logs_migration.CreatePalmaECP.logactiondateformat.ok=yyyy-MM-dd HH:mm:ss
+logs_migration.CreatePalmaECP.logactiondateformat.ko=yyyy-MM-dd HH:mm:ss
 logs_migration.CreatePalmaRFD.processorclassname=com.thales.palma.processors.TASDefaultLogsProcessor
 logs_migration.CreatePalmaRFD.fail_file_name=rfdsFailed
 logs_migration.CreatePalmaRFD.logactiondateformat.gen=yyyy-MM-dd HH:mm:ss
+logs_migration.CreatePalmaRFD.logactiondateformat.ok=yyyy-MM-dd HH:mm:ss
+logs_migration.CreatePalmaRFD.logactiondateformat.ko=yyyy-MM-dd HH:mm:ss
 logs_migration.CreatePalmaProblemReport.processorclassname=com.thales.palma.processors.TASProblemReportLogsProcessor
 logs_migration.CreatePalmaProblemReport.fail_file_name=probReportsFailed
 logs_migration.CreatePalmaProblemReport.logactiondateformat.gen=yyyy-MM-dd HH:mm:ss
+logs_migration.CreatePalmaProblemReport.logactiondateformat.ok=yyyy-MM-dd HH:mm:ss
+logs_migration.CreatePalmaProblemReport.logactiondateformat.ko=yyyy-MM-dd HH:mm:ss
 logs_migration.CreatePalmaContent.processorclassname=com.thales.palma.processors.TASContentLogsProcessor
 logs_migration.CreatePalmaContent.fail_file_name=contentsFailed
 logs_migration.CreatePalmaContent.logactiondateformat.gen=yyyy-MM-dd HH:mm:ss
+logs_migration.CreatePalmaContent.logactiondateformat.ok=yyyy-MM-dd HH:mm:ss
+logs_migration.CreatePalmaContent.logactiondateformat.ko=yyyy-MM-dd HH:mm:ss
 logs_migration.CreatePalmaNativeNeutralContentLink.processorclassname=com.thales.palma.processors.TASNativeNeutralContentLinkLogsProcessor
 logs_migration.CreatePalmaNativeNeutralContentLink.fail_file_name=contentLinksFailed
 logs_migration.CreatePalmaNativeNeutralContentLink.logactiondateformat.gen=yyyy-MM-dd HH:mm:ss
+logs_migration.CreatePalmaNativeNeutralContentLink.logactiondateformat.ok=yyyy-MM-dd HH:mm:ss
+logs_migration.CreatePalmaNativeNeutralContentLink.logactiondateformat.ko=yyyy-MM-dd HH:mm:ss
 logs_migration.CreatePalmaPartDescribeLink.processorclassname=com.thales.palma.processors.TASPartDescribeLinkLogsProcessor
 logs_migration.CreatePalmaPartDescribeLink.fail_file_name=partDescLinksFailed
 logs_migration.CreatePalmaPartDescribeLink.logactiondateformat.gen=yyyy-MM-dd HH:mm:ss
+logs_migration.CreatePalmaPartDescribeLink.logactiondateformat.ok=yyyy-MM-dd HH:mm:ss
+logs_migration.CreatePalmaPartDescribeLink.logactiondateformat.ko=yyyy-MM-dd HH:mm:ss
 logs_migration.CreatePalmaPartReferenceLink.processorclassname=com.thales.palma.processors.TASPartReferenceLinkLogsProcessor
 logs_migration.CreatePalmaPartReferenceLink.fail_file_name=partRefLinksFailed
 logs_migration.CreatePalmaPartReferenceLink.logactiondateformat.gen=yyyy-MM-dd HH:mm:ss
+logs_migration.CreatePalmaPartReferenceLink.logactiondateformat.ok=yyyy-MM-dd HH:mm:ss
+logs_migration.CreatePalmaPartReferenceLink.logactiondateformat.ko=yyyy-MM-dd HH:mm:ss
 logs_migration.CreatePalmaDeviationConfigurationLink.processorclassname=com.thales.palma.processors.TASPartDescribeLinkLogsProcessor
 logs_migration.CreatePalmaDeviationConfigurationLink.fail_file_name=partRfdLinksFailed
 logs_migration.CreatePalmaDeviationConfigurationLink.logactiondateformat.gen=yyyy-MM-dd HH:mm:ss
+logs_migration.CreatePalmaDeviationConfigurationLink.logactiondateformat.ok=yyyy-MM-dd HH:mm:ss
+logs_migration.CreatePalmaDeviationConfigurationLink.logactiondateformat.ko=yyyy-MM-dd HH:mm:ss
