--- a/src/main/resources/csvmapfile.properties
+++ b/src/main/resources/csvmapfile.properties
@@ -21,6 +21,9 @@ csvmapfile.CreatePalmaPartReferenceLink=01legacyIterationIdentifierPart~02number
 #-----------Part - RFD Link Loader
 csvmapfile.CreatePalmaDeviationConfigurationLink=01legacyIterationIdentifierPart~02numberPart~03versionPart~04viewPart~05legacyIterationIdentifierDocument~06numberDocument~07versionDocument~98createTimestamp~99modifyTimestamp
 
+#-----------Specified Item Loader
+csvmapfile.CreatePalmaSpecifiedItem=01legacyIterationIdentifier~02legacyMasterIdentifier~03legacyOriginIdentifier~05number~06name~08partType~11version~14endItem~15container~16folder~17id~18cage~19icd~20enLabel~21frLabel~25reusable~60itemCategory~61developmentCriterion~62comment~63externalID~90releasedOn~95lifeCycleState~96creator~97modifier~98createTimestamp~99modifyTimestamp~912createFrom
+
 # TAS BEGIN
 #-----------Item Loader [Internal HW, External HW] (extend of CreatePalmaPart)
 csvmapfile.CreateTASInternalHW=01legacyIterationIdentifier~02legacyMasterIdentifier~03legacyOriginIdentifier~04softType~05number~06name~07view~08partType~09genericType~10source~11version~12defaultUnit~13defaultTraceCode~14endItem~15container~16folder~17id~18cage~19icd~20enLabel~21frLabel~22description~23technicalClassification~24unitTracking~25reusable~26repairable~27isLogisticAssembly~28logisticStatus~29shelfLife~30productMaturity~31COTS~32softwareBaselineID~33softwareBuildID~34authorizationCode~35obsolescenceStatus~36isPhantom~37LBODate~38localPPLStatus~40functionalStatus~41baseTrackingIdentifier~42itemType~48startEffectivityDate~49spareable~90releasedOn~95lifeCycleState~96creator~97modifier~98createTimestamp~99modifyTimestamp~900qualityDef~907model~908pdmPart~909suffix~910derivedPart~911projectPart~912createFrom~917isTracedByMRP
