--- a/src/main/resources/logs_migration.properties
+++ b/src/main/resources/logs_migration.properties
@@ -53,6 +53,11 @@ logs_migration.CreatePalmaContent.fail_file_name=contentsFailed
 logs_migration.CreatePalmaContent.logactiondateformat.gen=yyyy-MM-dd HH:mm:ss
 logs_migration.CreatePalmaContent.logactiondateformat.ok=yyyy-MM-dd HH:mm:ss
 logs_migration.CreatePalmaContent.logactiondateformat.ko=yyyy-MM-dd HH:mm:ss
+logs_migration.CreatePalmaSpecifiedItem.processorclassname=com.thales.palma.processors.TASSpecifiedItemLogsProcessor
+logs_migration.CreatePalmaSpecifiedItem.fail_file_name=specifiedItemsFailed
+logs_migration.CreatePalmaSpecifiedItem.logactiondateformat.gen=yyyy-MM-dd HH:mm:ss
+logs_migration.CreatePalmaSpecifiedItem.logactiondateformat.ok=yyyy-MM-dd HH:mm:ss
+logs_migration.CreatePalmaSpecifiedItem.logactiondateformat.ko=yyyy-MM-dd HH:mm:ss
 logs_migration.CreatePalmaNativeNeutralContentLink.processorclassname=com.thales.palma.processors.TASNativeNeutralContentLinkLogsProcessor
 logs_migration.CreatePalmaNativeNeutralContentLink.fail_file_name=contentLinksFailed
 logs_migration.CreatePalmaNativeNeutralContentLink.logactiondateformat.gen=yyyy-MM-dd HH:mm:ss
